<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cburch.logisim</groupId>
  <artifactId>Logisim</artifactId>
  <!--
    The '-BETA' at the end of the file needs to be added manually
    for now.

    Launch4j does not play nicely with the '-BETA' due to its
    versioning scheme.
  -->
  <version>2.8.0</version>

  <name>Logisim</name>
  <url>https://github.com/dadler64/Logisim</url>
  <description>Continuation on the Logisim circuit simulator.</description>

  <licenses>
    <license>
      <name>GNU General Public License, Version 3.0</name>
      <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
    </license>
  </licenses>

  <properties>
    <icon.windows>src/main/resources/logisim/img/logisim-icon.ico</icon.windows>
    <main.class>com.cburch.logisim.Main</main.class>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <!--
      You will need to add the local project libraries
      to your maven repo in order for builds to work.

      In the future I hope to (possibly) minimize them
      and upload them to a real maven repo for easier
      dependency management.

      See the below link for instructions:
      https://stackoverflow.com/questions/4955635/how-to-add-local-jar-files-to-a-maven-project

      Also yes I know the groupId, and versions are
      not the same as in the jars. I did it this way
      because I was azy and wanted to make it easier.
    -->
    <dependency>
      <groupId>com.logisim</groupId>
      <artifactId>ColorPicker</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.logisim</groupId>
      <artifactId>FontChooser</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.logisim</groupId>
      <artifactId>JavaHelp</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.logisim</groupId>
      <artifactId>MRJAdapter</artifactId>
      <version>1.0.0</version>
    </dependency>
  </dependencies>

  <build>

    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
    <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>

    <plugins>

      <!--  Maven Compiler Plugin -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>8</source>
          <target>8</target>
        </configuration>
        <executions>
          <!-- Replacing default-compile as it is treated specially by maven -->
          <execution>
            <id>default-compile</id>
            <phase>none</phase>
          </execution>
          <execution>
            <id>default-testCompile</id>
            <phase>none</phase>
          </execution>
          <execution>
            <goals>
              <goal>compile</goal>
            </goals>
            <id>compile</id>
            <phase>compile</phase>
          </execution>
          <execution>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <id>testCompile</id>
            <phase>test-compile</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>

      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <transformers>
                <transformer
                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>${main.class}</Main-Class>
                    <!--                                        <Build-Number>000</Build-Number>-->
                  </manifestEntries>
                </transformer>
              </transformers>
            </configuration>
            <goals>
              <goal>shade</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.2.1</version>
      </plugin>

      <plugin>
        <artifactId>launch4j-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <classPath>
                <mainClass>${main.class}</mainClass>
                <preCp>anything</preCp>
              </classPath>
              <downloadUrl>http://java.com/download</downloadUrl>
              <headerType>gui</headerType>
              <icon>${icon.windows}</icon>
              <jar>
                ${project.build.directory}/${project.artifactId}-${project.version}.jar
              </jar>
              <jre>
                <jdkPreference>preferJre</jdkPreference>
                <minVersion>1.8.0</minVersion>
              </jre>
              <outfile>${project.build.directory}/${project.artifactId}-${project.version}.exe
              </outfile>
              <versionInfo>
                <companyName>${project.artifactId}</companyName>
                <copyright>2019 Dan Adler</copyright>
                <fileDescription>${project.name}</fileDescription>
                <fileVersion>${project.version}.0</fileVersion>
                <internalName>${project.artifactId}</internalName>
                <originalFilename>${project.artifactId}.exe</originalFilename>
                <productName>${project.name}</productName>
                <productVersion>${project.version}.0</productVersion>
                <txtFileVersion>${project.version}.0</txtFileVersion>
                <txtProductVersion>${project.version}.0</txtProductVersion>
              </versionInfo>
            </configuration>
            <goals>
              <goal>launch4j</goal>
            </goals>
            <id>l4j-clui</id>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <version>1.7.25</version>
      </plugin>
    </plugins>

  </build>

</project>